--- a/fsio.1
+++ b/fsio.1
@@ -38,7 +38,7 @@ The following verbs are supported:
 .br
 .B "\fIumount\fP  \- Remove knowledge of a container file from fsio"
 .br
-.B "\fInewfs\fP   \- Create and new container and empty file system"
+.B "\fInewfs\fP   \- Create a new container and empty file system"
 .br
 .B "\fImkdir\fP   \- Create a new empty directory on a mounted file system"
 .br
