Update documentation ready to merge with simtools repository.

--- a/fsio-unixv7.1
+++ b/fsio-unixv7.1
@@ -13,7 +13,7 @@ disks which have their super block stored at block 2. Unix V7 does not write
 any type of signature on the device so the \fImount\fP command uses a set of
 heuristics to determine if the file system is valid.
 .SH MOUNT OPERATION
-\fImount\fP accepts the optional "\fI-t type\fP" switch to provide additonal
+\fImount\fP accepts the optional "\fI-t type\fP" switch to provide an additonal
 check on the integrity of the file system (e.g. check for blocks addresses
 larger than the specified disk) (See NEWFS OPERATION below for details).
 .br
